@@ -83,7 +83,6 @@ LIBRPMIO_0
     Fdopen;
     _Fdopen;
     fdReadable;
-    fdSize;
     fdWritable;
     Ferror;
     _Ferror;
